# method-based-harness

./: .gitignore  README.es.md  README.md  pyproject.toml
docs/: ARCHITECTURE.md  ONBOARDING.md  findings.md  methodology-authoring.md  review-2026-06-09.md  role-schema.md
docs/reports/: 2026-06-08-120335-take-an-issue-to-work-in.md  SESSION_REPORT_issue78.md
examples/sella-cruce/: README.md  profile.yaml
harness/: __init__.py  _util.py  cli.py  compile.py  manifest.py  validate.py
harness/hosts/: __init__.py  claude.py
harness/trackers/: __init__.py  github_issues.py
methodologies/sdd/: CHECKPOINTS.md  methodology.md
roles/: leader.role.yaml  reviewer.role.yaml
tests/: conftest.py  test_adopt_and_propagate.py  test_cli_ux.py  test_doctor.py  test_init_upgrade.py  test_interpreter_consistency.py  test_issue_b_fixes.py  test_manifest.py  test_merge_block.py  test_orchestration_loop.py  test_scaffold.py  test_trackers.py  test_validate.py
